CMAKE_MINIMUM_REQUIRED( VERSION 2.8.3 )
PROJECT( dali )

SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -pg -Wall")	
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -Wall")	

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "Setting build type to 'Release' as none was specified.")
  set(CMAKE_BUILD_TYPE Release)
endif()

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(GLEW REQUIRED glew)

INCLUDE_DIRECTORIES(./src)
INCLUDE_DIRECTORIES(./lib/soil/include)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})


FILE( GLOB_RECURSE SOURCE_FILES "src/*" )
SET( SOIL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/lib/soil/lib/libSOIL.a )
ADD_LIBRARY( ${PROJECT_NAME} ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SOIL_LIBRARY} ${GLEW_LIBRARIES})
