CMAKE_MINIMUM_REQUIRED( VERSION 2.8.3 )
PROJECT( dali )

INCLUDE(FindPkgConfig)
##PKG_SEARCH_MODULE(GLEW REQUIRED glew)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(${LIB_DIR}/soil/include)
INCLUDE_DIRECTORIES(${LIB_DIR}/jsoncpp)

INCLUDE(ExternalProject)
ExternalProject_Add( glew
    PREFIX ${LIB_DIR}/glew
    GIT_REPOSITORY git://git.code.sf.net/p/glew/code 
    CONFIGURE_COMMAND make -C <SOURCE_DIR>/auto 
    BUILD_IN_SOURCE 1
    BUILD_COMMAND make
    INSTALL_COMMAND ""
    TIMEOUT 10
    )
INCLUDE_DIRECTORIES(${LIB_DIR}/glew/src/glew/include )

FILE( GLOB_RECURSE SOURCE_FILES "./*" )
ADD_LIBRARY( ${PROJECT_NAME} ${SOURCE_FILES} )
add_dependencies( dali glew )
SET( SOIL_LIBRARY ${LIB_DIR}/soil/lib/libSOIL.a)
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SOIL_LIBRARY} ${OPENGL_LIBRARIES} ${LIB_DIR}/glew/src/glew/lib/libGLEW.a )
